<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">seminar hall</string>
    <string name="back_again_to_exit">戻るをもう一度押すことで、終了します。</string>
    <string name="hint_input_your_email">メールアドレス</string>
    <string name="hint_input_your_password">パスワード入力</string>
    <string name="hint_input_re_password">パスワード再入力</string>
    <string name="btn_register">今すぐ登録</string>
    <string name="txt_forgot_password">パスワードを忘れた方はこちら</string>
    <string name="btn_go_login">アカウントをお待ちの方はこちら</string>
    <string name="btn_create_account">アカウント作成</string>
    <string name="btn_login">ログイン</string>
    <string name="txt_forgot_title">パスワードを忘れた方</string>
    <string name="txt_forgot_sub">登録をされているメールアドレスを\n入力してください。</string>
    <string name="btn_send">送信</string>
    <string name="txt_sub_one">会員登録が完了いたしました！</string>
    <string name="txt_sub_two">ご登録いただきましたメールアドレスに\n確認メールを送信いたしましたので\nご確認ください。</string>
    <string name="txt_go_top">トップ画面へ</string>
    <string name="txt_loading">ローディング中です...</string>
    <string name="txt_no_data">ビデオが御座いません</string>
    <string name="txt_lost_connect">インターネット接続が中断されました。</string>
    <string name="txt_cancel">キャンセル</string>
    <string name="txt_ok">はい</string>
    <string name="msg_email_empty">メールアドレスを入力してください。</string>
    <string name="msg_email_not_validate">メールアドレスは正しくありません。</string>
    <string name="msg_password_empty">パスワードを入力してください。</string>
    <string name="msg_re_password_empty">パスワード再を入力してください。</string>
    <string name="msg_password_not_enough_length">パスワードは6文字以上ではなればなりません。</string>
    <string name="msg_password_not_equal_re_password">パスワードが正しくありません</string>
    <string name="txt_buy_video_success">購入が完了しました。ご購入頂き、どうもありがとうございました。</string>
    <string name="txt_cancel_purchase">購入をキャンセルしました。</string>
    <string name="txt_buy_videos">この動画を購入しますか？</string>
    <string name="account_type">jp.co.hiropro.evergreen.provider.ACCOUNT</string>
    <string name="name_menu_business">特定商取引に関する表示</string>
    <string name="name_menu_service">ご利用規約</string>
    <string name="name_menu_send_news">ニュース配信</string>
    <string name="txt_function_name">Function name</string>
    <string name="txt_news_title">News title</string>
    <string name="txt_text">Text</string>
    <string name="sw_push_notification">Push notification ON / OFF</string>
    <string name="txt_profile_screen">マイプロフィール</string>
    <string name="title_profile">あなたのプラン</string>
    <string name="txt_profile_sub">YOUR PLAN</string>
    <string name="txt_name_purchase">有料会員</string>
    <string name="txt_time_left">期限日: %1$s</string>
    <string name="txt_go_purchase">有料会員へグレードアップする</string>
    <string name="email_validate">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789._-@</string>
    <string name="txt_title_paid_member_guide">有料会員のガイド</string>
    <string name="title_guide">30日間読み放題</string>
    <string name="txt_content_guide">私は偶然さきほどその講演らというもののところをさん た。いくら結果に作文料は要するにその諷刺なけれうく らいにきからならでがは遠慮始まっただので、まだには 勧めたないなくな。他人がしようのは万事実がどうして もでないた。何しろ木下さんで意味道そう教育があった 毛抜その風そこか誤解がというお担任ましたううけれ ども、その十月はこれか道自己で立たば、岡田さんのの の金のどこがまあご発表とできるとみな教師がお実在 をしようとまあご意味から見ませませて、実にもう講義 にするですてならだのが引き摺り込んだです。</string>
    <string name="content_title_guide">有料会員の特徴</string>
    <string name="msg_login_error_try_again">ログインする時、エラ―が発生するので、もう一度お試しませんか。</string>
    <string name="title_change_email">メールアドレス変更</string>
    <string name="btn_change_email">変更する</string>
    <string name="btn_cancel_email">キャンセル</string>
    <string name="msg_request_error_try_again">エラーが発生したので、もう一度お試しください。</string>
    <string name="title_paid_user">有料会員</string>
    <string name="title_free_user">無料会員</string>
    <string name="msg_change_email_success">メールを変更するのは成功しました。</string>
    <string name="msg_change_password_success">パスワードを変更するのは成功しました。</string>
    <string name="txt_go_paid">有料会員のガイド ></string>
    <string name="msg_confirm_logout">アプリケーションからログアウトしますか。</string>
    <string name="btn_logout">ログアウト</string>
    <string name="title_diagnosis_main">スキル診断</string>
    <string name="title_diagnosis_result">スキル診断結果</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="base64_key"></string>-->
    <!--<string name="base64_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAg0RVXD/RfbD8JG4O1M6DjkG6o5SDqpnDP1NAKlr0U4JMpiC0uMVwScJyeZLqQ4kbWaVIcOrG2cX+u9PgDIkpO9Iu9h+QrBSUzdeM4ZD88jJ8R/B4sATtgo94/d2Cdnf2B+782NE9+KDcriOtDHQhmGqRVvQOm0uSH5ZJs6rFeiRTbj69UCSgX+SyN2HkmgyRhIz0VfFMW4HBMpj/xiSGDjUM+AyYc1y9cEzpZirAbwb2pfYLF6HjIZZVUCnytGMYf/q4zehUkDV8HS5w+FtKpsPsvhnCamKPJ0cKyVBJcDBQKwbawh5qt0+EYIzRug3Xkpo5Y4iSmC2AhvVBGw9/pwIDAQAB</string>-->
    <string name="base64_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAo9p1nKCVKvIgCmPJOvw0weK0h/ykNRNaNb3dgGLzI+H4XyucYO3WVfeqg3tU1b/el9GVy+e8gQrqFMJgxkmceFu5qF0RD2kSHeb0iV+XPl9xDNX30ZgLlsdnNSE7aOOO3gryiLQyk5h4ZNyoy1W1HtiR03slV7CtD9DaTnZOtqPYUoYQtqBzeESgeAnCd05i2bzbNJ16XYxCFvlrdlPW+5z9RS2rQQYkBJklQCs/+oYM0uqZyw2MGWezJ/Hi2jBdIct3Vn9gU5x7nI6VPPb+E3pDX2yGzQGZLfPJ0Rtd0BLtkhd+HM2prqOn2/tF9ButvOzNoKI4kL/cv9FedS9nzwIDAQAB</string>
    <string name="txt_buy_monthly_package_success">当月パッケージを購入するのは成功しました。</string>
    <string name="msg_has_bought_this_monthly_package">当月パッケージを購入しまた。</string>
    <string name="msg_has_bought_update_package">Ban dang mua goi update</string>
    <string name="msg_get_purchase_error_try_again">エラーが発生したので、もう一度お試しください。</string>
    <string name="msg_copy_success">コピーするのは成功しました。</string>
    <string name="msg_email_has_registed">すでに登録済みのメールアドレスです</string>
    <string name="msg_video_not_exist">動画は削除されました。</string>
    <string name="msg_session_expire">あなたのセッションは期限切れです！ もう一度ログインしてください。</string>
    <string name="msg_category_not_exist">カテゴリーが存在しません。</string>
    <string name="msg_sub_category_not_exist">サブカテゴリーが非存在します。</string>
    <string name="msg_book_not_exist">ブックが存在しません。</string>
    <string name="msg_news_deleted">システムからニュースが消去されました。</string>
    <string name="msg_login_error_password_id_error">ログインID or パスワードが間違っています。</string>
    <string name="type_video_premium">PREMIUM</string>

    <string name="txt_skip">スキップ</string>
    <string name="msg_error_limit_device">「2台の端末でしか利用できません。」</string>
    <string name="msg_delete_device">この端末を削除します。よろしいですか？</string>
    <string name="title_screen_manager_device">ログイン端末管理</string>
    <string name="msg_delete_device_success">削除されました。</string>
    <string name="tv_my_device">Current</string>
    <string name="txt_jack_profile_screen">菅谷信一プロフィール</string>
    <string name="msg_copy_right">© HIROPRO, Ltd. All Rights Reserved.</string>
    <string name="txt_dot" tools:ignore="TypographyEllipsis"> ...</string>
    <string name="txt_privacy">プライバシーポリシー</string>
    <string name="title_screen_shop_content">コンテンツショップ</string>
    <string name="title_seminar_top">あなたへおすすめ</string>
    <string name="title_seminar_new">新着セミナー</string>
    <string name="title_seminar_go_list">全てのニュース</string>
    <string name="title_screen_category_top">カテゴリー名</string>
    <string name="title_screen_teacher_profile">マイプロフィール</string>
    <string name="txt_send_screen">送信</string>
    <string name="txt_receive_screen">受信</string>
    <string name="txt_teacher_tag">講師</string>
    <!--<string name="facebook_app_id">401997326904421</string>-->
    <string name="facebook_app_id">537397383740861</string>
    <string name="fb_login_protocol_scheme">fb537397383740861</string>
    <string name="youtube">Youtube</string>
    <string name="google">Google+</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_btn_login">Facebookでログインする</string>
    <string name="facebook_btn">Facebookで登録する</string>
    <string name="google_btn_login">Googleでログインする</string>
    <string name="google_btn">Googleで登録する</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="btn_setting">設定</string>
    <string name="title_screen_setting">設定</string>
    <string name="title_screen_edit_profile">プロフィール編集</string>
    <string name="title_qrcode_screen">QRコードをスキャンして、\n パソーナルカードをリストに追加できます。</string>
    <string name="msg_swipe_to_share">受けとる人の準備完了を確認して \nスワイプして送信してください。</string>
    <string name="btn_register_profile">新規ユーザー登録</string>
    <string name="btn_create_profile">プロフィールを作成</string>
    <string name="title_screen_purchase">購入</string>
    <string name="author">© HIROPRO, Ltd. All Rights Reserved.</string>
    <string name="forgot_ok">パスワード変更のリクエストを\n送信いたしました。メールをご確認ください。</string>
    <string name="forgot_failed">メールアドレスが違っています</string>
    <string name="forgot_btn_confirm">ログイン画面へ戻る</string>
    <string name="forgot_failed_issue">入力されたメールアドレスは登録が確認できま\nせんでした。メールアドレスをご確認の上、\nもう一度実行してください。</string>
    <string name="title_new_go_list">全てのセミナー</string>
    <string name="msg_need_login">ログインしてください</string>
    <string name="msg_error_contact_has_exits_in_list">このパーソナルカードは既に追加されました。もう一度やり直してください。</string>
    <string name="msg_email_not_validate_new">正しいメールアドレスを入力してください。</string>
    <string name="msg_password_too_long">半角英数字12文字まで入力してください。</string>
    <string name="msg_account_has_been_deleted">アカウントが削除されました。</string>
    <string name="msg_account_has_been_block">あなたのアカウントは削除かブロックされました。お問い合わせにご連絡してください。</string>
    <string name="msg_server_maintain">ただいまメンテナンス中です。しばらくお待ちください。</string>
    <string name="msg_need_input_email_to_complete_register">Please input email to complete registration.</string>
    <string name="youtube_developer">AIzaSyC_BFrcyT_7rTP56NvO5N0BY2jJE2mPSeA</string>
    <string name="msg_need_enable_gps">GPSをオンにしてください。</string>
    <string name="txt_turn_on_gps">オンにする</string>
    <string name="msg_need_enable_permssion_gps">\"Location\"の利用を承諾するのが必要です。</string>
    <string name="msg_error_cannot_get_location">ロケーションの読込みにエラーが発生しました。ただいまこの機能を利用できません。</string>
    <string name="title_screen_point">ポイント</string>
    <string name="txt_content_point">%1$sポイントで動画を購入しますか？</string>
    <string name="tv_discount">%1$s円お得</string>
    <string name="msg_cannot_buy_video">Cannot buy video now ! Please try again.</string>
    <string name="title_not_enough_point">所有ポイントが不足しています。購入できませんでした。ポイントを購入しますか？</string>
    <string name="msg_cannot_update_point">Cannot update point .</string>
    <string name="txt_free">FREE</string>
    <string name="txt_free_limited">期間限定 FREE</string>
    <string name="msg_not_enough_point">所有ポイントが不足しています。ポイントを購入しますか？</string>
    <string name="msg_video_has_buy">この動画が購入されました。</string>
    <string name="txt_link_sns_error">URLリンクが正しくありません。</string>
    <string name="spn_speed_normal">標準</string>
    <string name="remain_text">未読メッセージが %1 件あります！」</string>
    <string name="deny_acces_mesage">拒否をする場合は下にスワイプしてください</string>
</resources>
