<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:gravity="center_vertical|center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/value_10dp"
        android:padding="@dimen/value_20dp"
        android:text="@string/txt_loading"
        android:textSize="@dimen/text_size_18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main_bg_ranking" />

    <LinearLayout
        android:id="@+id/ll_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_white"
            android:text="@string/txt_cancel"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_20sp" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_white"
            android:text="@string/txt_ok"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_20sp" />

    </LinearLayout>
</LinearLayout>