<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_gradient"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/value_20dp"
        android:layout_marginRight="@dimen/value_20dp"
        android:background="@drawable/bg_edittext_transparent_border">

        <ImageView
            android:id="@+id/imv_email"
            android:layout_width="@dimen/value_25dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/value_15dp"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_email" />

        <vn.hanelsoft.forestpublishing.view.EditTextApp
            android:id="@+id/edt_email"
            style="@style/EditTextForest"
            android:layout_toRightOf="@id/imv_email"
            android:textCursorDrawable="@color/white"
            android:background="@android:color/transparent"
            android:digits="@string/email_validate"
            android:gravity="center_vertical"
            android:hint="@string/hint_input_your_email"
            android:inputType="textEmailAddress"
            app:fontFamilyApp="kozgopro6n_r" />
    </RelativeLayout>

    <vn.hanelsoft.forestpublishing.view.TextViewApp
        android:id="@+id/tv_error_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_email"
        android:layout_marginLeft="@dimen/value_20dp"
        android:layout_marginRight="@dimen/value_20dp"
        android:textColor="@android:color/holo_red_light"
        android:visibility="gone"
        tools:visibility="visible" />

    <vn.hanelsoft.forestpublishing.view.TextViewApp
        android:id="@+id/tv_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_email"
        android:layout_alignParentStart="true"
        android:lineSpacingExtra="@dimen/value_5dp"
        android:layout_marginBottom="49dp"
        android:gravity="center"
        android:text="@string/txt_forgot_sub"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <vn.hanelsoft.forestpublishing.view.TextViewApp
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_sub"
        android:layout_marginBottom="@dimen/value_25dp"
        android:gravity="center"
        android:text="@string/txt_forgot_title"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        app:fontFamilyApp="hiramaruw6" />

    <ImageView
        android:id="@+id/imv_back"
        android:layout_width="@dimen/value_25dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/value_15dp"
        android:adjustViewBounds="true"
        android:padding="@dimen/value_5dp"
        android:src="@mipmap/ic_back" />

    <vn.hanelsoft.forestpublishing.view.ButtonApp
        android:id="@+id/btn_send"
        style="@style/ButtonForest"
        android:layout_width="190dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/value_50dp"
        android:background="@drawable/bg_button_10dp"
        android:text="@string/btn_send"
        android:textColor="#5dbccb"
        app:fontFamilyApp="kozgopro6n_m"
        app:textStyle="bold" />
</RelativeLayout>