<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_gradient"
    tools:context="jp.co.hiropro.seminar_hall.controller.activity.ForgotSuccessActivity">

    <jp.co.hiropro.seminar_hall.view.TextViewApp
        android:id="@+id/tv_alert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/value_50dp"
        android:layout_marginRight="@dimen/value_50dp"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/value_8dp"
        android:text="@string/forgot_ok"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <jp.co.hiropro.seminar_hall.view.TextViewApp
        android:id="@+id/tv_alert_failed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/value_50dp"
        android:layout_marginRight="@dimen/value_50dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/forgot_failed"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imv_alert" />

    <jp.co.hiropro.seminar_hall.view.TextViewApp
        android:id="@+id/tv_alert_failed_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/value_8dp"
        android:text="@string/forgot_failed_issue"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_alert_failed" />

    <ImageView
        android:id="@+id/imv_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/value_50dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_ok"
        app:layout_constraintBottom_toTopOf="@+id/tv_alert"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <jp.co.hiropro.seminar_hall.view.ButtonApp
        android:id="@+id/btn_send"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginBottom="@dimen/value_50dp"
        android:background="@drawable/bg_button_10dp"
        android:gravity="center"
        android:text="@string/forgot_btn_confirm"
        android:textColor="#5dbccb"
        android:textSize="16sp"
        app:fontFamilyApp="hiramaruw6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:textStyle="bold" />
</android.support.constraint.ConstraintLayout>
