<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_gradient"
    android:orientation="vertical">

    <jp.co.hiropro.seminar_hall.view.TextViewApp
        android:id="@+id/tv_sub_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:text="@string/txt_sub_one"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        android:textStyle="bold"
        app:fontFamilyApp="hiramaruw6" />

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_sub_one"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_sub_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/value_30dp"
            android:layout_marginTop="@dimen/value_15dp"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/value_10dp"
            android:text="@string/txt_sub_two"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imv_check"
        android:layout_width="@dimen/value_150dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_sub_one"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/value_50dp"
        android:adjustViewBounds="true"
        android:src="@mipmap/imv_check_ok" />

    <jp.co.hiropro.seminar_hall.view.ButtonApp
        android:id="@+id/btn_go_top"
        style="@style/ButtonForest"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/value_70dp"
        android:background="@drawable/bg_button_10dp"
        android:paddingBottom="@dimen/value_10dp"
        android:paddingLeft="@dimen/value_50dp"
        android:paddingRight="@dimen/value_50dp"
        android:paddingTop="@dimen/value_10dp"
        android:text="@string/txt_go_top"
        android:textColor="#5dbccb"
        app:fontFamilyApp="kozgopro6n_m"
        app:textStyle="bold" />
</RelativeLayout>