<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_main"
    android:orientation="vertical"
    android:padding="@dimen/value_10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <vn.hanelsoft.forestpublishing.view.TextViewApp
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/value_20dp"
            android:layout_marginTop="@dimen/value_30dp"
            android:text="現在の登録メールアドレス"
            android:textColor="#aaaaaa"
            android:textSize="@dimen/text_size_16sp"
            app:fontFamilyApp="hiramaruw6" />

        <vn.hanelsoft.forestpublishing.view.EditTextApp
            android:id="@+id/edt_old_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/value_20dp"
            android:background="@drawable/bg_border"
            android:digits="@string/email_validate"
            android:enabled="false"
            android:hint="@string/hint_input_your_email"
            android:inputType="textEmailAddress"
            android:paddingBottom="@dimen/value_15dp"
            android:paddingLeft="@dimen/value_20dp"
            android:paddingTop="@dimen/value_15dp"
            android:text="xxx@hiropro.co.jp"
            android:textColor="#b7b7b7"
            app:fontFamilyApp="hiramaruw6" />

        <vn.hanelsoft.forestpublishing.view.TextViewApp
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/value_20dp"
            android:layout_marginTop="@dimen/value_30dp"
            android:text="メールアドレスを変更"
            android:textColor="#aaaaaa"
            android:textSize="@dimen/text_size_16sp"
            app:fontFamilyApp="hiramaruw6" />

        <vn.hanelsoft.forestpublishing.view.EditTextApp
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_20dp"
            android:background="@drawable/bg_border_white_10dp"
            android:hint="@string/hint_input_your_email"
            android:inputType="textEmailAddress"
            android:paddingBottom="@dimen/value_15dp"
            android:paddingLeft="@dimen/value_20dp"
            android:paddingTop="@dimen/value_15dp"
            android:textColor="#5b5b5b"
            android:textColorHint="#5b5b5b"
            app:fontFamilyApp="hiramaru" />

        <TextView
            android:id="@+id/tv_error_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/value_20dp"
            android:layout_marginTop="@dimen/value_10dp"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_cancel"
        style="@style/ButtonForest"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/value_30dp"
        android:layout_marginLeft="@dimen/value_30dp"
        android:layout_marginRight="@dimen/value_30dp"
        android:layout_marginTop="@dimen/value_15dp"
        android:text="@string/btn_cancel_email"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_change_email"
            style="@style/ButtonGradient"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/value_30dp"
            android:layout_marginRight="@dimen/value_30dp"
            android:text="@string/btn_change_email" />

        <include layout="@layout/footer_copy_right" />
    </LinearLayout>
</RelativeLayout>